# resource

./: .gitignore  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.types/: auto-components.d.ts  auto-imports.d.ts  auto-routes.d.ts
src/: app.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: tailwind.css
src/components/content/shared/: removable.vue
src/components/form/: save.vue  small.vue
src/components/form/button/: index.vue  styles.ts
src/components/form/check/: index.vue
src/components/game/: item.vue
src/components/game/create/: errors.vue  (+6 more)
src/components/list/: item.vue
src/components/misc/: recycling.vue
src/components/page/: header.vue
src/components/plugin/: item.vue  regex.vue
src/components/sidebar/: index.vue  item.vue
src/components/transition/: horizontal.vue  toggle.vue  vertical.vue
src/components/wrapper/: list.vue  modal.vue  ui.vue
src/composables/: async-scope.ts
src/modules/author-list/: index.ts
src/modules/client/: index.ts
src/modules/crawler-list/: index.ts
src/modules/game-list/: index.ts
src/modules/plugin-list/: index.ts
src/modules/provider/: index.ts
src/modules/router/: index.ts
src/modules/shared/: README.md
src/modules/utils/: list.ts
src/modules/validator/: cast.ts
src/pages/: crawlers.vue  games.vue  index.vue  plugins.vue  settings.vue
src/pages/content/: authors.vue  crawlers.vue  games.vue  plugins.vue
src/pages/ui/: button.vue  group.vue
(+63 files in other folders)
