[package]
name = "horny-workshop_resource"
version = "0.0.1"
description = "Horny Worksop Resource"
authors = [ "sawich" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "api-all",
  "devtools"
] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
windows-sys = "0.59.0"
winapi = { version = "0.3.9", features = [ "winuser" ] }
image = "0.25.2"
ico = "0.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
